--- a/lib/package.json
+++ b/lib/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "ui",
-  "version": "1.0.0",
+  "name": "yuice-ui",
+  "version": "1.0.11",
+  "main": "index.js",
   "description": "a vue3 component library"
 }
