--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "typescript": "^4.9.5",
     "unplugin-vue-define-options": "^1.1.4",
     "vite": "^4.0.4",
+    "vite-plugin-dts": "^2.1.0",
+    "vitepress": "1.0.0-alpha.50",
     "vue-loader": "^17.0.1",
     "vue-template-compiler": "^2.7.14",
     "yuice-ui": "workspace:^1.0.7"
